Updates from ShareLaTeX

--- a/lecture01/lecture01_handouts.tex
+++ b/lecture01/lecture01_handouts.tex
@@ -4,11 +4,11 @@
 \pgfpagesuselayout{4 on 1}[letterpaper,border shrink=5mm]
 
 % This file is a solution template for:
-\input{../preamble/beamer_presentation_preamble.tex}
+\input{preamble/beamer_presentation_preamble.tex}
 
 \begin{document}
 
 \date{Lecture 01}
-\input{slides01.tex}
+\input{lecture01/slides01.tex}
 
 \end{document}
