--- a/preamble/lab_preamble.tex
+++ b/preamble/lab_preamble.tex
@@ -9,17 +9,7 @@
 % Add ability to resume enumeration environments with /begin{enumerate}[resume]
 \usepackage{enumitem}
 
-\usepackage{pgf}
-\usepackage{tikz}
-\usepackage{bodegraph}
-\usepackage{circuitikz}
-\usetikzlibrary{calc}
-\usetikzlibrary{trees}
-\usetikzlibrary{arrows}
-\usetikzlibrary{shapes}
-\usetikzlibrary{fadings}
-\usetikzlibrary{positioning}
-\usetikzlibrary{intersections}
+\input{preamble/pgf_tikz.tex}
 
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
@@ -34,8 +24,3 @@
 
 \usepackage{xspace}
 \newcommand{\Ohm}{$\Omega$\xspace}
-
-% No author or date
-\author{}
-\date{}
-
