Updates from ShareLaTeX

--- a/master.tex
+++ b/master.tex
@@ -10,27 +10,45 @@
 
 \begin{document}
 \maketitle
+
+\include{calendar}
+
 \tableofcontents
 
-\chapter{Lab 1: Voltage, Current, Resistance, and Power}
-\include{lecture01/lecture01_handouts}
+\chapter{Voltage, Current, Resistance, and Power}
+%\include{lecture01/lecture01_handouts}
+\graphicspath{{lab01/}}
 \include{lab01/lab01}
 \include{lab01/notes01}
 
-\chapter{Lab 2: Voltage, Current, Resistance, and Power}
-\include{lecture02/lecture02_handouts}
+\chapter{Kirchhoff, Th\'{e}venin, and Impedance Matching}
+%\include{lecture02/lecture02_handouts}
+\graphicspath{{lab02/}}
 \include{lab02/lab02}
 \include{lab02/notes02}
 
-\chapter{Lab 3: Voltage, Current, Resistance, and Power}
-\include{lecture03/lecture03_handouts}
+\chapter{AC Signals, Complex Impedance, and Phase}
+%\include{lecture03/lecture03_handouts}
+\graphicspath{{lab03/}}
 \include{lab03/lab03}
 \include{lab03/notes03}
 
-\chapter{Lab 4: Voltage, Current, Resistance, and Power}
-\include{lecture04/lecture04_handouts}
-\include{lab04/lab03}
-\include{lab04/notes03}
+\chapter{Passive Filters}
+%\include{lecture04/lecture04_handouts}
+\graphicspath{{lab04/}}
+\include{lab04/lab04}
+\include{lab04/notes04}
 
+\chapter{Diodes}
+%\include{lecture05/lecture05_handouts}
+\graphicspath{{lab05/}}
+\include{lab05/lab05}
+\include{lab05/notes05}
+
+\chapter{Circuit Simulation and Layout Software}
+%\include{lecture06/lecture06_handouts}
+\graphicspath{{lab06/}}
+\include{lab06/lab06}
+\include{lab06/notes06}
 
 \end{document}
