--- a/preamble/lab_preamble.tex
+++ b/preamble/lab_preamble.tex
@@ -1,6 +1,9 @@
 % 1 inch margins
 \usepackage{fullpage}
 
+\usepackage{booktabs}
+\usepackage{longtable}
+
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{multicol}
