Updates from ShareLaTeX

--- a/calendar.tex
+++ b/calendar.tex
@@ -1,10 +1,13 @@
 \documentclass{article}
+\usepackage{standalone}
+\usepackage{import}
 
+\usepackage{fullpage}
 \usepackage{booktabs}
 \usepackage{longtable}
 
 \title{Electronics: Course Calendar}
-\author{}
+\author{College of William \& Mary}
 \date{Spring 2015}
 
 \begin{document}
