--- a/lab01/lab01.tex
+++ b/lab01/lab01.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
 
+\usepackage{import}
+\subimport{../preamble/}{lab_preamble.tex}
+
 %
 % Ideas:
 % - make one of the resistors in the voltage divider a potentiometer and let the students twiddle it to see how the output voltage changes
@@ -7,9 +10,6 @@
 %
 
 
-
-% This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
 
 
 \title{Lab 1: Voltage, Current, Resistance, and Power}
