--- a/lab02/notes02.tex
+++ b/lab02/notes02.tex
@@ -1,12 +1,9 @@
 \documentclass{article}
 
-
-% This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
-
+\usepackage{import}
+\subimport{../preamble/}{lab_preamble.tex}
 
 \title{Kirchhoff's Laws and Th\'{e}venin's Theorem}
-
 
 \begin{document}
 \maketitle
