--- a/lab03/notes03.tex
+++ b/lab03/notes03.tex
@@ -1,9 +1,7 @@
 \documentclass{article}
 
-
-% This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
-
+\usepackage{import}
+\subimport{../preamble/}{lab_preamble.tex}
 
 \title{Capacitors, Inductors, and Complex Impedance}
 
