--- a/preamble/lab_preamble.tex
+++ b/preamble/lab_preamble.tex
@@ -1,4 +1,7 @@
-% 1 inch margins
+\usepackage[subpreambles=true]{standalone}
+
+\usepackage{import}
+
 \usepackage{fullpage}
 
 \usepackage{booktabs}
@@ -8,6 +11,8 @@
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{subcaption}
+
+\usepackage{siunitx}
 
 % Add ability to resume enumeration environments with /begin{enumerate}[resume]
 \usepackage{enumitem}
@@ -19,11 +24,10 @@
 \usepackage[T1]{fontenc}
 % Or whatever. Note that the encoding and the font should match. If T1 does not look nice, try deleting the line with the fontenc.
 
-
 \usepackage{listings}
 
 \usepackage{amsmath}
 
-
 \usepackage{xspace}
+
 \newcommand{\Ohm}{$\Omega$\xspace}
