--- a/lab12/lab12.tex
+++ b/lab12/lab12.tex
@@ -10,6 +10,20 @@
 \begin{document}
 \maketitle
 
+\section{Design Exercises}
 
+\begin{enumerate}
+\item Using only NOR gates, implement the OR, AND and XOR gates.
+\item Construct a three-bit adder: $OUT = A + B + C$, where $A$, $B$ and $C$ are single bit inputs and ``+'' represents the arithmetic addition (not a logical OR).
+\end{enumerate}
+
+\section{Lab: Digital Electronics}
+
+\begin{enumerate}
+\item NOR gate.  Using a 74LS02 quad NOR gate, verify the NOR gate truth table.
+\item Three-bit adder.  Construct a circuit which adds three bits according to rules of binary arithmetics. Note, we have plenty of ready to use basic gates (NAND, NOR, AND, inverter) but there is no XOR gate. You are not allowed to use it even if you find it.  Make sure that the instructor or TA approves and marks that your circuit does the job according to the specification.
+\item RS flip-flop.  Build an RS flip-flop using two NAND gates, and verify the truth table (it will take $\bar{R}$ and $\bar{S}$ as input).
+\item (Bonus) Clocked RS flip-flop. Extend your RS flip-flop to a clocked RS flip-flop. Use a less than 1\,Hz clock signal from the TTL output of the function generator to provide the clock signal.
+\end{enumerate}
 
 \end{document}
