--- a/master.tex
+++ b/master.tex
@@ -17,38 +17,38 @@
 \tableofcontents
 
 \chapter{Voltage, Current, Resistance, and Power}
-%\import{lecture01/lecture01_handouts}
+\import{lecture01/lecture01_handouts}
 \import{lab01/}{lab01}
 \import{lab01/}{notes01}
 
-% \chapter{Kirchhoff, Th\'{e}venin, and Impedance Matching}
-% %\import{lecture02/lecture02_handouts}
-% \graphicspath{{lab02/}}
-% \import{lab02/lab02}
-% \import{lab02/notes02}
+\chapter{Kirchhoff, Th\'{e}venin, and Impedance Matching}
+\import{lecture02/lecture02_handouts}
+\graphicspath{{lab02/}}
+\import{lab02/lab02}
+\import{lab02/notes02}
 
-% \chapter{AC Signals, Complex Impedance, and Phase}
-% %\import{lecture03/lecture03_handouts}
-% \graphicspath{{lab03/}}
-% \import{lab03/lab03}
-% \import{lab03/notes03}
+\chapter{AC Signals, Complex Impedance, and Phase}
+\import{lecture03/lecture03_handouts}
+\graphicspath{{lab03/}}
+\import{lab03/lab03}
+\import{lab03/notes03}
 
-% \chapter{Passive Filters}
-% %\import{lecture04/lecture04_handouts}
-% \graphicspath{{lab04/}}
-% \import{lab04/lab04}
-% \import{lab04/notes04}
+\chapter{Passive Filters}
+\import{lecture04/lecture04_handouts}
+\graphicspath{{lab04/}}
+\import{lab04/lab04}
+\import{lab04/notes04}
 
-% \chapter{Diodes}
-% %\import{lecture05/lecture05_handouts}
-% \graphicspath{{lab05/}}
-% \import{lab05/lab05}
-% \import{lab05/notes05}
+\chapter{Diodes}
+\import{lecture05/lecture05_handouts}
+\graphicspath{{lab05/}}
+\import{lab05/lab05}
+\import{lab05/notes05}
 
-% \chapter{Circuit Simulation and Layout Software}
-% %\import{lecture06/lecture06_handouts}
-% \graphicspath{{lab06/}}
-% \import{lab06/lab06}
-% \import{lab06/notes06}
+\chapter{Circuit Simulation and Layout Software}
+\import{lecture06/lecture06_handouts}
+\graphicspath{{lab06/}}
+\import{lab06/lab06}
+\import{lab06/notes06}
 
 \end{document}
