--- a/midterm/2015/midterm_v1.tex
+++ b/midterm/2015/midterm_v1.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper,addpoints,answers]{exam}
+\documentclass[letterpaper,addpoints]{exam}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{multicol}
