Removed ../ in import statement for files in subdirectories.

--- a/lab02/notes02.tex
+++ b/lab02/notes02.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \usepackage{import}
-\subimport{../preamble/}{lab_preamble.tex}
+\subimport{preamble/}{lab_preamble.tex}
 
 \title{Kirchhoff's Laws and Th\'{e}venin's Theorem}
 
