--- a/lab07/lab07.tex
+++ b/lab07/lab07.tex
@@ -2,7 +2,7 @@
 
 
 % This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
+\input{preamble/lab_preamble.tex}
 
 
 \title{Bipolar Junction Transistors}
