--- a/lecture05/lecture05_presentation.tex
+++ b/lecture05/lecture05_presentation.tex
@@ -1,7 +1,7 @@
 \documentclass[compress]{beamer}
 
 % This file is a solution template for:
-\input{../preamble/beamer_presentation_preamble.tex}
+\input{preamble/beamer_presentation_preamble.tex}
 
 \begin{document}
 
