--- a/lab03/notes03.tex
+++ b/lab03/notes03.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \usepackage{import}
-\subimport{../preamble/}{lab_preamble.tex}
+\subimport{preamble/}{lab_preamble.tex}
 
 \title{Capacitors, Inductors, and Complex Impedance}
 
