--- a/lab07/notes07.tex
+++ b/lab07/notes07.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \usepackage{import}
-\subimport{../preamble/}{lab_preamble.tex}
+\subimport{preamble/}{lab_preamble.tex}
 
 \title{Passive Analog Signal Processing}
 
