--- a/lab09/lab09.tex
+++ b/lab09/lab09.tex
@@ -2,7 +2,7 @@
 
 
 % This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
+\input{preamble/lab_preamble.tex}
 
 
 \title{Op Amp Circuits for Detectors, Filters, and Power Applications}
