--- a/lab09/notes09.tex
+++ b/lab09/notes09.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \usepackage{import}
-\subimport{../preamble/}{lab_preamble.tex}
+\subimport{preamble/}{lab_preamble.tex}
 
 \title{Op Amp Circuits for Detectors, Filters, and Power Applications}
 
