--- a/lab10/lab10.tex
+++ b/lab10/lab10.tex
@@ -2,7 +2,7 @@
 
 
 % This file is a solution template for:
-\input{../preamble/lab_preamble.tex}
+\input{preamble/lab_preamble.tex}
 
 
 \title{Feedback and PID Control Theory}
