--- a/lecture03/lecture03_presentation.tex
+++ b/lecture03/lecture03_presentation.tex
@@ -3,7 +3,7 @@
 %\includeonlyframes{draft}
 
 % This file is a solution template for:
-\input{../preamble/beamer_presentation_preamble.tex}
+\input{preamble/beamer_presentation_preamble.tex}
 
 \begin{document}
 
