--- a/lecture12/lecture12_handouts.tex
+++ b/lecture12/lecture12_handouts.tex
@@ -4,7 +4,7 @@
 \pgfpagesuselayout{4 on 1}[letterpaper,border shrink=5mm]
 
 % This file is a solution template for:
-\input{../preamble/beamer_presentation_preamble.tex}
+\input{preamble/beamer_presentation_preamble.tex}
 
 \begin{document}
 
