--- a/lecture05/lecture05_presentation.tex
+++ b/lecture05/lecture05_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 05}
-\input{slides05.tex}
-
+\import{lecture05/}{slides05.tex}
 \end{document}
