--- a/lecture06/lecture06_presentation.tex
+++ b/lecture06/lecture06_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 06}
-\input{slides06.tex}
-
+\import{lecture06/}{slides06.tex}
 \end{document}
