--- a/lecture03/lecture03_presentation.tex
+++ b/lecture03/lecture03_presentation.tex
@@ -1,13 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-%\includeonlyframes{draft}
-
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 03}
-\input{slides03.tex}
-
+\import{lecture03/}{slides03.tex}
 \end{document}
