--- a/lecture04/lecture04_presentation.tex
+++ b/lecture04/lecture04_presentation.tex
@@ -1,13 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-%\includeonlyframes{draft}
-
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 04}
-\input{slides04.tex}
-
+\import{lecture04/}{slides04.tex}
 \end{document}
