--- a/lecture07/lecture07_presentation.tex
+++ b/lecture07/lecture07_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 07}
-\input{slides07.tex}
-
+\import{lecture07/}{slides07.tex}
 \end{document}
