--- a/lecture08/lecture08_presentation.tex
+++ b/lecture08/lecture08_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 08}
-\input{slides08.tex}
-
+\import{lecture08/}{slides08.tex}
 \end{document}
