--- a/lecture09/lecture09_presentation.tex
+++ b/lecture09/lecture09_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 09}
-\input{slides09.tex}
-
+\import{lecture09/}{slides09.tex}
 \end{document}
