--- a/lecture10/lecture10_presentation.tex
+++ b/lecture10/lecture10_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 10}
-\input{slides10.tex}
-
+\import{lecture10/}{slides10.tex}
 \end{document}
