--- a/lecture11/lecture11_presentation.tex
+++ b/lecture11/lecture11_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 11}
-\input{slides11.tex}
-
+\import{lecture11/}{slides11.tex}
 \end{document}
