--- a/lecture12/lecture12_presentation.tex
+++ b/lecture12/lecture12_presentation.tex
@@ -1,11 +1,9 @@
-\documentclass[compress]{beamer}
+\documentclass[beamer]{standalone}
+\usepackage{import}
 
-% This file is a solution template for:
-\input{preamble/beamer_presentation_preamble.tex}
+\import{preamble/}{beamer_presentation_preamble.tex}
 
 \begin{document}
-
 \date{Lecture 12}
-\input{slides12.tex}
-
+\import{lecture12/}{slides12.tex}
 \end{document}
