Changes to preamble

--- a/preamble/beamer_presentation_preamble.tex
+++ b/preamble/beamer_presentation_preamble.tex
@@ -97,7 +97,7 @@
 % resp., then you can add a logo as 
 
 %remember extension must be ommited
-\pgfdeclareimage[height=1cm]{wm-wordmark-stacked}{../styles/wm_wordmark_stacked_green}
+\pgfdeclareimage[height=1cm]{wm-wordmark-stacked}{styles/wm_wordmark_stacked_green}
 %\logo{\pgfuseimage{wm-wordmark-stacked}}
 
 \institute[W\&M] % (optional, but mostly needed)
